@@ -170,6 +170,8 @@ public:
 		sfsPROPAGATE_DRAGGING = 4096,
 		/*! \brief Propagate selection to parent shape (it means this shape cannot be selected because its focus is redirected to its parent shape) */
 		sfsPROPAGATE_SELECTION = 8192,
+		/*! \brief Propagate interactive connection request to parent shape (it means this shape cannot be connected interactively because this feature is redirected to its parent shape) */
+		sfsPROPAGATE_INTERACTIVE_CONNECTION = 16384,
 		/*! \brief Default shape style */
 		sfsDEFAULT_SHAPE_STYLE = sfsPARENT_CHANGE | sfsPOSITION_CHANGE | sfsSIZE_CHANGE | sfsHOVERING | sfsHIGHLIGHTING | sfsSHOW_HANDLES | sfsALWAYS_INSIDE | sfsDELETE_USER_DATA
 	};
